--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
             player.setup({
 
-              file: "https://your-abbu.pages.dev/abbu.mp4",
+              file: "http://xtv.ooo:8080/live/15155419/16175512/167590.ts",
 
               width: "100%",
 
